CircleCI: Test `composer satis:build`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,14 @@ workflows:
           post-steps:
             - composer/exec:
                 command: phpstan:analyse
+      - composer/install:
+          name: test-build
+          executor: composer/seven
+          install_args: --no-interaction --no-dev --prefer-dist
+          post-steps:
+            - composer/exec:
+                command: satis:build
+
   deploy-cron:
     <<: *deploy-jobs-master
     triggers:
