--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "php": "^7.3",
     "ext-json": "*",
     "composer/composer": "^1.8",
-    "composer/satis": "dev-master#f90f13d"
+    "composer/satis": "dev-master#f90f13d",
+    "composer/semver": "^1.5"
   },
   "require-dev": {
     "phpstan/phpstan": "^0.11.6",
