--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-/build/
-/node_modules/
+### Composer ###
 /vendor/
-/.php_cs.cache
-/.phpunit.result.cache
-/composer.phar
-/phpunit.xml
-/satis.phar
-/satis.json
+
+### PhpStorm ###
+/.idea/
